--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles/css/icon-font.css">
+  <link rel="stylesheet" href="styles/css/icon-font.css">
   <link rel="stylesheet" href="styles/main.scss">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
@@ -42,22 +42,24 @@
           You're going to fall in love with nature
         </h3>
         <p class="paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque earum eveniet odio sint sit. Adipisci commodi consectetur culpa cum esse magnam porro sit vitae voluptas! Corporis deleniti maiores saepe suscipit.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque earum eveniet odio sint sit. Adipisci
+          commodi consectetur culpa cum esse magnam porro sit vitae voluptas! Corporis deleniti maiores saepe suscipit.
         </p>
         <h3 class="heading-tertiary mb-sm">
           Live adventures like you never have before
         </h3>
         <p class="paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque earum eveniet odio sint sit. Adipisci commodi consectetur culpa cum
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque earum eveniet odio sint sit. Adipisci
+          commodi consectetur culpa cum
         </p>
 
         <a href="#" class="btn-text">Learn more &rArr;</a>
       </div>
       <div class="col-1-of-2">
         <div class="composition">
-          <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
-          <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-          <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+          <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1"> <img
+          src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2"> <img
+          src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
         </div>
       </div>
     </div>
@@ -103,6 +105,112 @@
           </p>
         </div>
       </div>
+    </div>
+  </section>
+
+  <!--  tours section-->
+  <section class="section-tours">
+    <div class="u-center-text mb-lg">
+      <h2 class="heading-secondary">
+        Most popular tours
+      </h2>
+      <div class="row">
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--1">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--1">The Sea Explorer</span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>3 day tours</li>
+                  <li>Up to 30 people</li>
+                  <li>2 tour guides</li>
+                  <li>Sleep in cozy hotels</li>
+                  <li>Difficulty: easy</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-1">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">Only</p>
+                  <p class="card__price-value">$297</p>
+                </div>
+                <a href="#popup" class="btn btn-white">Book now!</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--2">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--2">The Forest Hiker</span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>7 day tours</li>
+                  <li>Up to 40 people</li>
+                  <li>6 tour guides</li>
+                  <li>Sleep in provided tents</li>
+                  <li>Difficulty: medium</li>
+                </ul>
+              </div>
+
+            </div>
+            <div class="card__side card__side--back card__side--back-2">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">Only</p>
+                  <p class="card__price-value">$497</p>
+                </div>
+                <a href="#popup" class="btn btn-white">Book now!</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--3">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--3">The Snow Adventurer</span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>5 day tours</li>
+                  <li>Up to 15 people</li>
+                  <li>3 tour guides</li>
+                  <li>Sleep in provided tents</li>
+                  <li>Difficulty: hard</li>
+                </ul>
+              </div>
+
+            </div>
+            <div class="card__side card__side--back card__side--back-3">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">Only</p>
+                  <p class="card__price-value">$897</p>
+                </div>
+                <a href="#popup" class="btn btn-white">Book now!</a>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
   </section>
 </main>
