--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
 
   <section class="section-features">
 
-
     <div class="row">
       <div class="col-1-of-4">
         <div class="feature-box">
@@ -211,6 +210,65 @@
             </div>
           </div>
         </div>
+      </div>
+  </section>
+
+  <!--  stories section-->
+  <section class="section-stories">
+    <div class="bg-video">
+      <video class="bg-video__content" autoplay muted loop>
+        <source src="img/video.mp4" type="video/mp4">
+        <source src="img/video.webm" type="video/webm">
+        Your browser is not supported
+      </video>
+    </div>
+
+    <div class="u-center-text u-margin-bottom-big">
+      <h2 class="heading-secondary">
+        We make people genuinely happy
+      </h2>
+    </div>
+
+    <div class="row">
+      <div class="story">
+        <figure class="story__shape">
+          <img src="img/nat-8.jpg" alt="Person on tour" class="story__img">
+          <figcaption class="story__caption">Mary Smith</figcaption>
+        </figure>
+        <div class="story__text">
+          <h3 class="heading-tertiary mb-sm">
+            I had the best week ever with my family
+          </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat
+            quis consequatur ducimus quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente aspernatur libero
+            repellat quis consequatur ducimus quam nisi exercitationem omnis earum qui.
+          </p>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="story">
+        <figure class="story__shape">
+          <img src="img/nat-9.jpg" alt="Person on tour" class="story__img">
+          <figcaption class="story__caption">Jack Wilson</figcaption>
+        </figure>
+        <div class="story__text">
+          <h3 class="heading-tertiary mb-sm">
+            WOW! My life is completely different now
+          </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat
+            quis consequatur ducimus quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente aspernatur libero
+            repellat quis consequatur ducimus quam nisi exercitationem omnis earum qui.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="u-center-text mt-xl">
+      <a href="#popup" class="btn-text">Read all stories &rarr;</a>
     </div>
   </section>
 </main>
