--- a/index.html
+++ b/index.html
@@ -295,18 +295,14 @@
             </div>
             <div class="form__group mb-md">
               <div class="form__radio-group">
-                <input type="radio" id="small" class="form__radio-input" name="size">
-                <label for="small" class="form__radio-label">
-                  <span class="form__radio-button"></span>
-                    Small tour group
-                </label>
+                <input type="radio" id="small" class="form__radio-input" name="size"> <label for="small"
+                                                                                             class="form__radio-label">
+                <span class="form__radio-button"></span> Small tour group </label>
               </div>
               <div class="form__radio-group">
-                <input type="radio" id="large" class="form__radio-input" name="size">
-                <label for="large" class="form__radio-label">
-                  <span class="form__radio-button"></span>
-                  Large tour group
-                </label>
+                <input type="radio" id="large" class="form__radio-input" name="size"> <label for="large"
+                                                                                             class="form__radio-label">
+                <span class="form__radio-button"></span> Large tour group </label>
               </div>
               <div class="form__group" style="padding-top: 3rem">
                 <button class="btn btn--green">
@@ -319,7 +315,38 @@
       </div>
     </div>
   </section>
+
 </main>
+<!--  Footer-->
+<footer class="footer">
+  <div class="footer__logo-box">
+    <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+  </div>
+  <div class="row">
+    <div class="col-1-of-2">
+      <div class="footer__navigation">
+        <ul class="footer__list">
+          <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Privacy</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-1-of-2">
+      <p class="footer__copyright">
+        Built by <a href="#" class="footer__link">Chuck Smith</a> at <a href="https://eclecticsaddlebag.com"
+                                                                        class="footer__link">Eclectic Saddlebag</a>
+        Copyright
+        &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal
+        and commercial use, but NOT to claim it as your own design. A credit to the original author, Jonas
+        Schmedtmann, is of course highly appreciated!
+      </p>
+      </p>
+    </div>
+  </div>
+</footer>
 
 <!-- Grid exercise
 <section class="grid-test">
